# QRuSSt

./: .gitignore  Cargo.toml  README.md
assets/: QRuSSt.glade  default.toml  logger.toml
src/: gui.rs  logging.rs  macros.rs  main.rs  settings.rs  windows.rs
