[package]
name = "QRuSSt"
version = "0.1.0"
authors = ["italic <italic.rendezvous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "*"
clap =        "~2.33.0"
config =      "*"
serde =       {version = "*", features = ["derive"]}
toml =        "*"
gtk =         {version = "0.8.0", features = ["v3_22_30"]}
gio =         {version = "0.8.0"}
cpal =        "~0.11.0"
rustfft =     "~3.0.1"
sample =      "*"
gnuplot =     "*"
