[package]
name = "QRuSSt"
version = "0.1.0"
authors = ["italic <italic.rendezvous@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog =        "~2.5.2"
sloggers =    "~0.3.5"
shellexpand = "~2.0.0"
clap =        "~2.33.0"
config =      "~0.10.1"
serde =       {version = "~1.0.105", features = ["derive"]}
toml =        "~0.5.6"
glib =        "~0.9.3"
gtk =         {version = "0.8.0", features = ["v3_22_30"]}
gio =         {version = "0.8.0"}
cpal =        "~0.11.0"
rustfft =     "~3.0.1"
sample =      "~0.10.0"
gnuplot =     "~0.0.34"
